# ChangeLog for dev-ruby/rake
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rake/ChangeLog,v 1.70 2009/03/16 16:00:06 a3li Exp $

  16 Mar 2009; Alex Legler <a3li@gentoo.org> rake-0.8.3.ebuild,
  rake-0.8.4.ebuild:
  Adding USE_RUBY entries

*rake-0.8.4 (07 Mar 2009)

  07 Mar 2009; Hans de Graaff <graaff@gentoo.org> +rake-0.8.4.ebuild:
  Version bump with compatibility fixes.

  26 Dec 2008; Raúl Porcel <armin76@gentoo.org> rake-0.8.3.ebuild:
  alpha/ia64 stable wrt #250348

  20 Dec 2008; Markus Meier <maekke@gentoo.org> rake-0.8.3.ebuild:
  amd64/x86 stable, bug #250348

  14 Dec 2008; nixnut <nixnut@gentoo.org> rake-0.8.3.ebuild:
  Stable on ppc wrt bug 250348

  12 Dec 2008; Hans de Graaff <graaff@gentoo.org> -rake-0.8.0.ebuild,
  -rake-0.8.2.ebuild:
  Remove old versions

  10 Dec 2008; Ferris McCormick <fmccor@gentoo.org> rake-0.8.3.ebuild:
  Sparc stable, part of Bug #250348.

  09 Dec 2008; Brent Baude <ranger@gentoo.org> rake-0.8.3.ebuild:
  Marking rake-0.8.3 ppc64 for bug 250348

*rake-0.8.3 (06 Oct 2008)

  06 Oct 2008; Hans de Graaff <graaff@gentoo.org> +rake-0.8.3.ebuild:
  Version bump with minor Windows bugfixes

*rake-0.8.2 (18 Sep 2008)

  18 Sep 2008; Hans de Graaff <graaff@gentoo.org> +rake-0.8.2.ebuild:
  Version bump

  17 Apr 2008; Raúl Porcel <armin76@gentoo.org> rake-0.8.1.ebuild:
  ia64 stable wrt #217389

  16 Apr 2008; Tobias Klausmann <klausman@gentoo.org> rake-0.8.1.ebuild:
  Stable on alpha, bug #217389

  13 Apr 2008; Markus Rothe <corsair@gentoo.org> rake-0.8.1.ebuild:
  Stable on ppc64; bug #217389

  12 Apr 2008; Ferris McCormick <fmccor@gentoo.org> rake-0.8.1.ebuild:
  Sparc stable --- Bug #217389 --- Good since the end of January.

  12 Apr 2008; Dawid Węgliński <cla@gentoo.org> rake-0.8.1.ebuild:
  Stable on x86 (bug #217389)

  12 Apr 2008; nixnut <nixnut@gentoo.org> rake-0.8.1.ebuild:
  Stable on ppc wrt bug 217389
