@@ -2,9 +2,11 @@ DIST rake-0.7.3.gem 84480 RMD160 3def1145968a9ccc326ee904772878ce5e3e87b2 SHA1 d
 DIST rake-0.8.1.gem 90112 RMD160 fbb00b09f577b71081fe01c7e318e54acaabf37c SHA1 349b0853d5a32012a8f282750c2f1abaf1169213 SHA256 7cd2e89c7736a7829f1fbc2a2ecbd7f911ee68d170ea31ad2b8277b943380227
 DIST rake-0.8.3.gem 100352 RMD160 8a81f35787c814b427177b88c07f6d2410b799a9 SHA1 fc3060c6c3ea3b804ef95576e41706b92fd51243 SHA256 c4792392fa21fd3b00b4909947cff70dcf327ebf07b86858a35b711f7391db9c
 DIST rake-0.8.4.gem 103936 RMD160 30e20fce53051afe2e7b5f03018b65a8ea8af9ab SHA1 3d0d287df69b38e4ba1efd567669df1d27809691 SHA256 ce856915b6b65a9f3fd5689a88f39010bbb8a7a68e685beaee4e1bd8687b7d65
+DIST rake-0.8.5.gem 104448 RMD160 328fc6fd313ee9dd7e6f62ea7f6dd707f9ddd07a SHA1 ce8a10446842e481e7d552c99873c162a5810508 SHA256 cb39a683e0756954f12e54c841c8670931af4ce7fc4751e28d05185008e9c837
 EBUILD rake-0.7.3.ebuild 687 RMD160 4e50fd2f4e3d89b4218c3e17aa3afaa3937674d6 SHA1 4ed49e86f37b0cbbc14f35147a9c32f1fe6fb9ec SHA256 453c78fad3525d9f987fc6382da0ee89d9c501e24327e7d110ae79b7b02b70db
 EBUILD rake-0.8.1.ebuild 442 RMD160 239ca4b8e517f0e72e2fe75514bbf1bf34214bb5 SHA1 a6b62462d208359e6f11a1fcee6d91cb176578d7 SHA256 efd15c0bb967f004d60727bc9fe9f1e23bf911846c928fc48df9621591254fb3
 EBUILD rake-0.8.3.ebuild 441 RMD160 ee6b5aa07237a1206305b34dfc2e0de44e84b0d7 SHA1 dcf1c6748abb5df625e09ac6420860a358ef0b57 SHA256 b9a983911bb5634af992fe8d3de53dd074a8bbff5c2f1ed90a83695def3c9076
 EBUILD rake-0.8.4.ebuild 448 RMD160 245b249fe5dc5d95f459f5ba9068ce0018c8bccf SHA1 ef9ac89fe97bfb156642d57a66ea7cff90ed0ca6 SHA256 9a2a2809fdca917811a51f85ceb0ded18684d398d2568447e8d42eece22e11e1
-MISC ChangeLog 8359 RMD160 ae05b8771b3b9ce3b9c2db82e3a13f468f131376 SHA1 2cdacdd45c7f5539e4b9e3a570eeb860da4ed072 SHA256 1d964f5b3c54f212b10f8335ed72dc6bfa4a080573daa95eda0553bccbb65f83
+EBUILD rake-0.8.5.ebuild 450 RMD160 59b6e2e9fe61566ca9e8791e6046d1d0fc5c2fd4 SHA1 1ca177508729fbf6bd7615b89c0d0d5f035f5aa9 SHA256 7c3fee4b6cbfe9a3564c47f5415344f30a03f8c871ea80cfe9f7311e167b726f
+MISC ChangeLog 8522 RMD160 1da6d4863c950efae88785ad4c32f39384b270e6 SHA1 4fa99811adab620e464b7cd061c9480ffa44ace2 SHA256 c5dc4212b8a9a72ddd1ca08da8baca1226c314bb2de85fb369daed15eab2b7f7
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
