@@ -1,0 +1,14 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rake/rake-0.8.5.ebuild,v 1.1 2009/05/10 20:32:37 graaff Exp $
+
+inherit gems
+USE_RUBY="ruby18 ruby19"
+
+DESCRIPTION="Make-like scripting in Ruby"
+HOMEPAGE="http://rake.rubyforge.org/"
+
+LICENSE="MIT"
+SLOT="0"
+KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x86-solaris"
+IUSE=""
